--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&display=swap"
       rel="stylesheet"
     />
-    <title>Aplicação React</title>
+    <title>Api GitHub</title>
   </head>
   <body>
     <noscript
